# Technical_Stock_Analyzer

./: .gitignore  Home.py  README.md  data_loader.py  finance_team.py  indicators.py  main_app.py  plotting.py  pyproject.toml  utils.py
.streamlit/: config.toml
pages/: 1_Fintelligence.py
